# routes/contacts.js
@@ -9,7 +9,7 @@ router.get('/', async (req, res) => {
     const db = getDb();
     const result = await db.collection('contacts').find();
     const contacts = await result.toArray();
-    res.status(200).json({ contacts: contacts }); // wrap in object
+    res.status(200).json({ contacts }); // wrap in object
   } catch (error) {
     res.status(500).json({ message: error.message });
   }
